# github_analytics_platform

./: .gitignore  pyproject.toml
configs/: base.yml  dev.yml
scripts/: run.sh
src/: main.py
src/jobs/: __init__.py  batch_job.py  exploration.py
src/utils/: spark.py
